bug de placement après le clear

--- a/game.html
+++ b/game.html
@@ -92,19 +92,19 @@
                 <div class="mcui-Crafting_Table">
                     <span class="mcui-input">
                         <span class="mcui-row">
-                            <div class="invslot grid-item" id="place-1" data-item="null" onClick="place_item(this)"></div>
-                            <div class="invslot grid-item" id="place-2" data-item="null" onClick="place_item(this)"></div>
-                            <div class="invslot grid-item" id="place-3" data-item="null" onClick="place_item(this)"></div>
+                            <div class="invslot grid-item" id="place-1" data-item="null" onmousedown=""></div>
+                            <div class="invslot grid-item" id="place-2" data-item="null" onmousedown=""></div>
+                            <div class="invslot grid-item" id="place-3" data-item="null" onmousedown=""></div>
                         </span>
                         <span class="mcui-row">
-                            <div class="invslot grid-item" id="place-4" data-item="null" onClick="place_item(this)"></div>
-                            <div class="invslot grid-item" id="place-5" data-item="null" onClick="place_item(this)"></div>
-                            <div class="invslot grid-item" id="place-6" data-item="null" onClick="place_item(this)"></div>
+                            <div class="invslot grid-item" id="place-4" data-item="null" onmousedown=""></div>
+                            <div class="invslot grid-item" id="place-5" data-item="null" onmousedown=""></div>
+                            <div class="invslot grid-item" id="place-6" data-item="null" onmousedown=""></div>
                         </span>
                         <span class="mcui-row">
-                            <div class="invslot grid-item" id="place-7" data-item="null" onClick="place_item(this)"></div>
-                            <div class="invslot grid-item" id="place-8" data-item="null" onClick="place_item(this)"></div>
-                            <div class="invslot grid-item" id="place-9" data-item="null" onClick="place_item(this)"></div>
+                            <div class="invslot grid-item" id="place-7" data-item="null" onmousedown=""></div>
+                            <div class="invslot grid-item" id="place-8" data-item="null" onmousedown=""></div>
+                            <div class="invslot grid-item" id="place-9" data-item="null" onmousedown=""></div>
                         </span>
                     </span>
                     <span class="mcui-arrow">
