Changement de nom

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipedia</title>
+    <title>Recipe Craft Master</title>
     <link rel="stylesheet" href="style/page.css">
     <link rel="stylesheet" href="style/craft.css">
     <link rel="stylesheet" href="style/get_item.css">
@@ -12,9 +12,9 @@
     <link rel="stylesheet" href="style/alert.css">
 </head>
 <body>
-    <h1>Recipedia</h1>
+    <h1>Recipe Craft Master</h1>
     <div id="header-text">
-        <p>Welcome to the Recipedia !</p>
+        <p>Welcome to the Recipe Craft Master !</p>
         <p>This site is designed to test your knowledge of Minecraft crafts.</p>
         <p>To your craft tables !</p>
     </div>
@@ -45,7 +45,7 @@
         </div>
     </div>
     <div id="footer">
-        <p>&copy; 2025 Recipedia. All rights reserved.</p>
+        <p>&copy; 2025 Recipe Craft Master. All rights reserved.</p>
         <p>Created by NekShor.</p>
         <p>For any questions or feedback, feel free to reach out!</p>
         <div id="contact-list">
