--- a/game.html
+++ b/game.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jeux</title>
+    <title>Recipe Craft Master</title>
 
     <!-- script -->
     <script src="items/item/items.js"></script>
