--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="style/interface.css">
     <link rel="stylesheet" href="style/accueil.css">
     <link rel="stylesheet" href="style/alert.css">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+
 </head>
 <body>
     <h1>Recipe Craft Master</h1>
