item screen acceuil

--- a/game.html
+++ b/game.html
@@ -82,7 +82,7 @@
             <p>Set :</p>
             <div id="list_set_prevent">
             </div>
-            <p>Crafts possibles :</p>
+            <p>Possibles crafts  :</p>
             <div id="list_possible_prevent">
             </div>
         </div>
