--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="style/alert.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 
+    <script src="scripts/acceuil.js"></script>
+    <script src="items/item/items.js"></script>
+
 </head>
 <body>
     <h1>Recipe Craft Master</h1>
@@ -80,5 +83,9 @@
     <div id="alert">
         <p>This site is in beta version; there may be bugs or unfinished features. Feel free to report them to me.</p>
     </div>
+
+    <script>
+        lauch_items();
+    </script>
 </body>
 </html>
