--- a/game.html
+++ b/game.html
@@ -39,11 +39,12 @@
     </div>
     <div id="information" class="white mcui" style="display: none;">
         <div class="info-timer" style="display: none;">
-            <h1>Information</h1>
+            <h1>Speed craft</h1>
             <p>The goal of the game is to test your knowledge of Minecraft crafting recipes!</p>
             <p>You have 60 seconds to find as many crafts as possible, with 10 seconds added to the timer for each item found.</p>
             <p>You can skip an item, but it will cost you a 10-second penalty.</p>
             <p>Try to achieve the highest score possible!</p>
+            <p>This site may collect certain data to improve the gaming experience.</p>
             <input type="button" class="interface_btn white shadow" id="close-info" value="Close" onClick="information()">
         </div>
         <div class="info-items-set" style="display: none;">
@@ -52,6 +53,7 @@
             <p>Find as many crafts as possible using only these items.</p>
             <p>The crafted items are added to the list, allowing you to create even more crafts!</p>
             <p>The item set updates every day at noon, French time.</p>
+            <p>This site may collect certain data to improve the gaming experience.</p>
             <input type="button" class="interface_btn white shadow" id="close-info-set" value="Close" onClick="information()">
         </div>
         <div class="info-crafting" style="display: none;">
