--- a/game.html
+++ b/game.html
@@ -93,6 +93,7 @@
                 <h1 class="no_mobile">Items</h1>
                 <div id="search_bar_div">
                     <input type="text" class="invslot search_bar white shadow" id="search" placeholder="Search for items..." oninput="display_item(this.value)" onclick="this.value = '';">
+                    <div id="btn_sort" class="btn_in_game" data-sort="levenshtein" onclick="change_sort(this)"></div>
                     <div id="item_selected" class="btn_in_game"></div>
                 </div>
                 <div id="items_list">
