--- a/game.html
+++ b/game.html
@@ -10,6 +10,7 @@
     <script src="crafts/crafts.js"></script>
     <script src="crafts/tagMap.js"></script>
     <script src="scripts/get_item.js"></script>
+    <script src="scripts/all.js"></script>
     <script src="scripts/craft.js"></script>
     <script src="scripts/interface.js"></script>
 
