--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 
     <script src="scripts/acceuil.js"></script>
+    <script src="scripts/all.js"></script>
     <script src="items/item/items.js"></script>
 
 </head>
