--- a/game.html
+++ b/game.html
@@ -27,6 +27,8 @@
 
     <!-- favicon -->
     <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <!-- no robot -->
+    <meta name="robots" content="noindex, nofollow">
 </head>
 <body>
     <div id="end-game" class="white mcui" style="display: none;">
