--- a/game.html
+++ b/game.html
@@ -87,7 +87,7 @@
             <p>Set :</p>
             <div id="list_set_prevent">
             </div>
-            <p>Possibles crafts  :</p>
+            <p>Available crafts  :</p>
             <div id="list_possible_prevent">
             </div>
         </div>
