--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     <p>Practice crafting without time pressure or limitations.</p>
                     <a href="game.html?mode=crafting" class="btn_in_game" aria-label="Play Free Crafting mode">
                         <img src="items/texture/minecraft_crafting_table.png" alt="Free crafting game mode icon" class="game-icon">
-                        Crafting Free
+                        Free Crafting
                     </a>
                 </article>
             </div>
