--- a/game.html
+++ b/game.html
@@ -39,6 +39,9 @@
         <p id="end-time">Time taken: <span id="final-time">00:00</span></p>
         <input type="button" class="interface_btn white shadow" id="restart-game" value="Restart Game" onclick="start_game()">
         <input type="button" class="interface_btn white shadow" id="close" value="Close" onClick="close_end_interface()">
+        <div id="share">
+
+        </div>
     </div>
     <div id="information" class="white mcui" style="display: none;">
         <div class="info-timer" style="display: none;">
